[package]
name = "shuttle"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for testing concurrent Rust code"
repository = "https://github.com/awslabs/shuttle"
keywords = ["concurrency", "lock", "thread", "async"]
categories = ["asynchronous", "concurrency", "development-tools::testing"]

[dependencies]
assoc = "0.1.3"
bitvec = "1.0.1"
generator = "0.8.1"
hex = "0.4.2"
owo-colors = "3.5.0"
rand_core = "0.6.4"
rand = "0.8.5"
rand_pcg = "0.3.1"
scoped-tls = "1.0.0"
smallvec = { version = "1.11.2", features = ["const_new"] }
tracing = { version = "0.1.36", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
futures = "0.3.15"
proptest = "1.0.0"
regex = "1.5.5"
tempfile = "3.2.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
pin-project = "1.1.3"

[lib]
bench = false

[[bench]]
name = "lock"
harness = false

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "counter"
harness = false
