[workspace]
members = [
    "shuttle",
    "wrappers/shuttle_rand_0.8",
    "wrappers/shuttle_sync",
    "wrappers/collections",
    "wrappers/collections/deterministic_collections",
    "wrappers/collections/std_collections",
    "wrappers/lazy_static",
    "wrappers/tokio/impls/tokio",
    "wrappers/tokio/impls/tokio-macros",
    "wrappers/tokio/impls/tokio-stream",
    "wrappers/tokio/impls/tokio-test",
    "wrappers/tokio/impls/tokio-util",
    "wrappers/tokio/wrappers/shuttle-tokio",
    "wrappers/tokio/wrappers/shuttle-tokio-stream",
    "wrappers/tokio/wrappers/shuttle-tokio-retry",
    "wrappers/tokio/impls/tokio-retry",
    "wrappers/parking_lot",
    "wrappers/async_stream",
]

resolver = "2"
