[package]
name = "shuttle-async-stream"
version = "0.3.6"
edition = "2021"
license = "MIT"
description = "A Shuttle-compatible wrapper for the `async-stream` crate"

[features]
shuttle = [ "dep:shuttle-async-stream-impl" ]

[dependencies]
cfg-if = "1.0"
async-stream-orig = { package = "async-stream", version = "0.3" }
shuttle-async-stream-impl = { path = "./async_stream_impl", version = "0.1.0", optional = true }
