[package]
name = "shuttle-lazy_static"
version = "0.0.1"
edition = "2024"

[features]
shuttle = ["dep:shuttle-lazy_static-impl"]

spin_no_std = [ "lazy_static/spin_no_std", "shuttle-lazy_static-impl?/spin_no_std"  ]

[dependencies]
cfg-if = "1.0"
lazy_static = "1.4"
shuttle-lazy_static-impl = { path = "./lazy_static_impl", version = "0.0.1", optional = true }
