[package]
name = "shuttle-parking_lot-impl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Internal implementation of the `parking_lot` crate for use with the Shuttle concurrency testing tool. Do not depend on this crate directly; use `shuttle-parking_lot`."

[features]
arc_lock = []
deadlock_detection = []
hardware-lock-elision = []
nightly = []
owning_ref = []
send_guard = []
serde = []

[dependencies]
shuttle = { path = "../../../shuttle", version = "<0.10"}
tracing = { version = "0.1.36", default-features = false, features = ["std"] }
