[package]
name = "shuttle-rand-impl"
version = "0.1.0"
edition = "2024"

[features]
alloc = []
getrandom = []
min_const_gen = []
nightly = []
serde1 = []
simd_support = []
small_rng = []
std = []
std_rng = []

[dependencies]
shuttle = { path = "../../../shuttle", version = "*"}
rand-orig = { package = "rand", version = "0.8" }
