[package]
name = "shuttle-rand_0_8-inner"
version = "0.1.0"
edition = "2024"

[features]
alloc = []
default = []
getrandom = []
min_const_gen = []
nightly = []
serde1 = []
small_rng = []
std = []
std_rng = []

[dependencies]
shuttle = { path = "../../../shuttle", version = "*"}
rand-orig = { package = "rand", version = "0.8.6" }


