[package]
name = "shuttle-tokio-macros-impl"
version = "0.1.0" # Forked from "2.2.0"
edition = "2021"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0", features = ["full"] }
shuttle = { path = "../../../../shuttle" }
proc-macro-crate = "3.1.0"

[dev-dependencies]
shuttle-tokio = { package = "shuttle-tokio-impl", path = "../tokio", version = "*" }
