[package]
name = "shuttle-tokio-macros-impl"
version = "0.1.0" # Forked from "2.2.0"
edition = "2021"
license = "MIT"
description = "A fork of tokio-macros 2.2.0 which is compatible with the Shuttle concurrency checker."

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0", features = ["full"] }
shuttle = { path = "../../../../shuttle", version = "0.9" }
proc-macro-crate = "3.1.0"
