[package]
name = "shuttle-tokio-stream-impl"
version = "0.1.0" # Forked from "0.1.14"
edition = "2021"
rust-version = "1.63"
license = "MIT"
description = "A fork of tokio-stream 0.1.14 which is compatible with the Shuttle concurrency checker."

[features]
default = ["time"]

full = [
    "time",
    "net",
    "io-util",
    "fs",
    "sync",
    "signal"
]

time = []
net = []
io-util = []
fs = []
sync = []
signal = []

[dependencies]
tokio = { path = "../tokio", package = "shuttle-tokio-impl", version = "*" }
shuttle = { version = "0.9", path = "../../../../shuttle" }
futures-core = { version = "0.3.0" }
pin-project-lite = "0.2.11"
tokio-util = "0.7.0"

[dev-dependencies]
async-stream = "0.3"
tokio-test = { package = "shuttle-tokio-test-impl", path = "../tokio-test" }
futures = { version = "0.3", default-features = false }
